--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
 
     implementation files('../spotify-remote-lib/spotify-app-remote-release-0.7.2.aar')
