--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    implementation 'org.mozilla.deepspeech:libdeepspeech:0.9.2'
+
     //implements PocketSphynx
     implementation files('../libs/pocketsphinx-android-5prealpha-release.aar')
     //implementation project(':models')
