Services and Speeches

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,16 +54,11 @@ dependencies {
     implementation 'com.spotify.android:auth:2.0.1'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.core:core-ktx:1.10.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation 'org.mozilla.deepspeech:libdeepspeech:0.9.2'
-
-    //implements PocketSphynx
-    implementation files('../libs/pocketsphinx-android-5prealpha-release.aar')
-    //implementation project(':models')
 }
 
 /*
