Renamed ZapsOS to Glitch. GlitchOS will be used as the project name and Glitch will be used as the name of the assistant. All references should be renamed, but I might have missed a few

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    namespace 'com.whmin.zapsos'
+    namespace 'com.whmin.glitchos'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.whmin.zapsos"
+        applicationId "com.whmin.glitchos"
         minSdk 29
         //noinspection OldTargetApi
         targetSdk 33
