--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
@@ -14,10 +15,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/glitch"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ZapsOS"
+        android:theme="@style/Theme.GlitchOS"
         tools:targetApi="31">
         <service
-            android:name=".service.ZapsOSService"
+            android:name=".service.GlitchOSService"
             android:enabled="true"
             android:exported="false"></service>
 
